2007-04-26  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/FtpDownloader.cs:
	Added functionality to donwload from a FTP server.
	Resuming and showing download progress is still missing.

2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/DownloadManager.cs
	* src/libnsm/Download.cs:
	Checking and extracting files now works

2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* dbus-sharp/*
	* configure.ac:
	Set required dbus-sharp version to 0.5.2,
	because previous releases aren't thread-safe

2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* examples/DBusTester.py
	* examples/testapp.cs
	* examples/testapp.py:
	Added examples from the tutorial.

2007-04-15  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/Globals.cs.in
	* src/libnsm/libnsm.mdp
	* src/libnsm/NewStuff.cs
	* src/libnsm/DownloadManager.cs
	* src/libnsm/Makefile.am
	* src/libnsm/DownloadClient.cs
	* tests
	* examples
	* examples/DownloadManager.py
	* examples/DBusTester.py:
	Got rid of DownloadClient. DownloadManager now handels
	all the downloading.
	
	Renamed tests dir to examples and added DownloadManager
	example

2007-04-15  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/DownloadItem.cs
	* src/libnsm/NewStuff.cs
	* src/libnsm/DownloadManager.cs
	* src/libnsm/Makefile.am
	* src/libnsm/DownloadClient.cs
	* src/libnsm/Download.cs
	* src/nsm/Main.cs:
	Created DownloadManager class
	
	It's currently only working for HTTP
	and no progress can be retrieved

2007-04-14  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs